...
                    isUseDrawingTool.toggle()
                }) {
                    Label( "tools", systemImage: "rectangle.and.pencil.and.ellipsis")
                        .foregroundColor(Color.orange)
                        .labelStyle(.titleOnly)
                }
                .accessibilityIdentifier("drawing_tools")
                
                Divider()
                
                Button( action: processImage, label: {
                    Label( "process", systemImage: "eye")
                        .foregroundColor(Color.orange)
                        .labelStyle(.titleOnly)
                    
                })
                .accessibilityIdentifier("drawing_process")
                .networkEnabled(networkService)
            }
            )
        }
        .onCancel {
            processImageTask?.cancel()
...
