...
            isDiagramPresented.toggle()
        }
        label: {
            Label("Preview >", systemImage: "photo.fill")
                .labelStyle(.titleOnly)
        }
        .accessibilityIdentifier("diagram_preview")
        .padding(.leading, 15)
        .networkEnabled(networkService)
            
    }

//    func ToggleDiagramButton() -> some View {
...
        label: {
            Label {
                Text("OpenAI Editor")
            } icon: {
                #if __OPENAI_LOGO
                // [How can I set an image tint in SwiftUI?](https://stackoverflow.com/a/73289182/521197)
                Image("openai")
                    .resizable()
                    .colorMultiply(isOpenAIVisible ? .blue : .gray)
                    .frame( width: 28, height: 28)
                #else
                Image( systemName: "brain" )
                    .resizable()
...
