...
                                }) {
                                    Text("Cancel")
                                        .font(.title)
                                        .tint(.red)
                                }
                                .padding()
                                .accessibilityIdentifier("cancel_processing")
                                
                            }
                            .frame( height: h)
                            //                            .border(Color.red)
                        }
                        .frame( width: geometry.size.width * 0.4,
...
