...
                
                Button( action: {
                    isDrawingPresented.toggle()
                }) {
                    Label( "Drawing", systemImage: "pencil.circle")
                }
                .accessibilityIdentifier("openai_drawing")
                .disabled( !service.isSettingsValid )
                
                Button( action: { tabs = .Prompt } ) {
                    Label( "Prompt", systemImage: "keyboard.onehanded.right")
                }
                .accessibilityIdentifier("openai_prompt")
...
